PIE menu can't be selected #112610

Closed
opened 2023-09-20 04:57:08 +02:00 by RedHaloStudio · 4 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-19 08:47, hash: 78315faf8fbd
Worked: (newest version of Blender that worked as expected)

Short description of error
PIE menu can't be selected

Exact steps for others to reproduce the error
1.Enabled '3D VIewport Pie Menus' addon
2.add any mesh object and toggled to edit mode
3. Select all vertex
4. press X or Alt X, the Combination menu cannot be selected.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-19 08:47, hash: `78315faf8fbd` Worked: (newest version of Blender that worked as expected) **Short description of error** PIE menu can't be selected **Exact steps for others to reproduce the error** 1.Enabled '3D VIewport Pie Menus' addon 2.add any mesh object and toggled to edit mode 3. Select all vertex 4. press `X` or `Alt X`, the Combination menu cannot be selected.
RedHaloStudio added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-20 04:57:09 +02:00
Member

good on 64976a396b, will test latest.

good on 64976a396be5, will test latest.
Member

53cbdaaa8b still seems to be good. Unable to confirm this...

53cbdaaa8b4a99862d44f still seems to be good. Unable to confirm this...
Member

Hi, thanks for the report. I can confirm. It seems this was affected by recent commits about pie menu interface to avoid dead-zones. (for example: 48b8c8f78f / a8db828618)

Hi, thanks for the report. I can confirm. It seems this was affected by recent commits about pie menu interface to avoid dead-zones. (for example: 48b8c8f78f8037bf50411b81ab3a021840d80207 / a8db82861809be71f501d33cfe0a3e231ce1ae4d)
Member

Caused by a8db828618
@ideasman42 ^

Caused by a8db82861809be71f501d33cfe0a3e231ce1ae4d @ideasman42 ^
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-20 09:29:42 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112610
No description provided.