Fix #112610: Nested pie menu items can't be selected

Regression in [0] caused pie menus that contain layouts with buttons
not to be selectable.

[0]: a8db82861809be71f501d33cfe0a3e231ce1ae4d